--- a/Dia 2/styles.css
+++ b/Dia 2/styles.css
@@ -1,19 +1,20 @@
-body{
-    background-color: rgb(24,22,22);
+header{
+    display: flex;
+    align-items: center; 
+    justify-content: space-between;
+    background-color: orange;
 }
 
-#cabecera{
-    color: white;
+ul{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    list-style: none;
 }
-
-.contenedor-principal{
-    color: blue;
+.PRIMERAFILA{
+    display: flex;
+    justify-content: space-between;
 }
-
-h1{
-    color: red;
-}
-
-.subtitulos{
-    color: red;
+section{
+    background-color: orange;
 }
